--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Compañias de videojuegos y los juegos populares</title>
+    <title>Trabajos de videojuegos y los juegos populares</title>
 </head>
 <body>
     <h1>Compañias de videojuegos</h1>
