--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
 
         Su creador fue Genyo Takeda, considerado por el propio Shigeru Miyamoto como el primer desarrollador de videojuegos de Nintendo. Y es que antes de que el sistema VHS se implantara a nivel mundial como líder indiscutible, se desarrollaron una plétora de formatos de vídeo diferentes, entre ellos el EVR, que Nintendo utilizaría en varios de sus gabinetes de aquellos primeros videojuegos.</p>
     <p>La segunda compañia en iniciar en la industria fue Sony con la Playstation</p>
-    <img src="Imagenes/" alt="" width="250px">
-    <p>El origen del PlayStation es irónico. Por los «lejanos» años 90, Nintendo buscaba dar el paso gigante que lo consolidará como rey absoluto de los videojuegos.
 
+    <img src="Imagenes/" alt="" width="250px"
+    <img src="Imagenes/Carrera Evr.jpg" alt="" width="250px">
+    <p>El origen del PlayStation es irónico. Por los «lejanos» años 90, Nintendo buscaba dar el paso gigante que lo consolidará como rey absoluto de los videojuegos.
+      
         Para lograr dicho objetivo, necesitaba pasar del cartucho al CD.
         
         Para el desarrollo de este aditamento que leyera CD, Nintendo decidió aliarse con una empresa japonesa, Sony, donde se produciría el primer Nintendo PlayStation.
