--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         Su creador fue Genyo Takeda, considerado por el propio Shigeru Miyamoto como el primer desarrollador de videojuegos de Nintendo. Y es que antes de que el sistema VHS se implantara a nivel mundial como líder indiscutible, se desarrollaron una plétora de formatos de vídeo diferentes, entre ellos el EVR, que Nintendo utilizaría en varios de sus gabinetes de aquellos primeros videojuegos.</p>
     <p>La segunda compañia en iniciar en la industria fue Sony con la Playstation</p>
 
-    <img src="" alt="Imagenes/nik" width="250px"
+    <img src="" alt="Imagenes/nike" width="250px"
     <img src="Imagenes/Carrera Evr.jpg" alt="" width="250px">
     <p>El origen del PlayStation es irónico. Por los «lejanos» años 90, Nintendo buscaba dar el paso gigante que lo consolidará como rey absoluto de los videojuegos.
       
