--- a/Trabajo de exposicion/index.html
+++ b/Trabajo de exposicion/index.html
@@ -21,7 +21,7 @@
 
         Su creador fue Genyo Takeda, considerado por el propio Shigeru Miyamoto como el primer desarrollador de videojuegos de Nintendo. Y es que antes de que el sistema VHS se implantara a nivel mundial como líder indiscutible, se desarrollaron una plétora de formatos de vídeo diferentes, entre ellos el EVR, que Nintendo utilizaría en varios de sus gabinetes de aquellos primeros videojuegos.</p>
     <p>La segunda compañia en iniciar en la industria fue Sony con la Playstation</p>
-    <img src="Imagenes/logo de Sony.png" alt="" width="250px">
+    <img src="Imagenes/logodenike.jpg" alt="" width="250px">
     <p>El origen del PlayStation es irónico. Por los «lejanos» años 90, Nintendo buscaba dar el paso gigante que lo consolidará como rey absoluto de los videojuegos.
 
         Para lograr dicho objetivo, necesitaba pasar del cartucho al CD.
