--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Compañias de videojuegos</h1>
+    <img src="Imagenes/Kortaferlogo-3.png" alt="" width="250px">
     <p>La primera compañia de videojuegos es la que inicio con todo en la industria fue Nintendo</p>
     <img src="Imagenes/nintendo-logo.png" alt="" width="250px">
     <p>Nintendo Company, Ltd. (任天堂株式会社 Nintendō Kabushiki-gaisha?) es una empresa de entretenimiento dedicada a la investigación, desarrollo y distribución de software y hardware de videojuegos, y juegos de cartas, con sede en Kioto, Japón.3​ Su origen se remonta a 1889, cuando comenzó a operar como Nintendo Koppai tras ser fundada por el artesano Fusajirō Yamauchi4​ con el objetivo de producir y comercializar naipes hanafuda.5​ Tras incursionar en varias líneas de negocio durante la década de 1960 y adquirir una personalidad jurídica de empresa de capital abierto bajo la denominación actual, en 1977 distribuyó su primera videoconsola en Japón, la Color TV Game 15.6​7​8​
@@ -121,6 +122,7 @@
     <div style="text-align: center;">
     <img src="Imagenes/game-ratings-death-stranding.jpg" alt="" width="250px">
     <img src="Imagenes/game-ratings-sims-4.jpg" alt ="" width="250px">
+    <img src="Imagenes/gta6-4.png" alt="250px">
 
 </body>
 </html>
